# tcu_scope

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  README.md
.travis/: install_cuda.sh
cmake/: Helpers.cmake  protoc.cmake
cmake/modules/: FindOpenBLAS.cmake  GetGitRevisionDescription.cmake
figures/: README.md  full_prefixsu.dict.json  full_prefixsum.html  full_prefixsum.json  full_prefixsum_atomic_cg.dict.json  full_prefixsum_atomic_cg.html  full_prefixsum_atomic_cg.json  full_prefixsum_ker3.dict.json  full_prefixsum_ker3.html  full_prefixsum_ker3.json  full_reduction.dict.json  full_reduction.html  full_reduction.json  full_reduction_atomic_ballo.dict.json  full_reduction_atomic_ballot.html  full_reduction_atomic_ballot.json  full_reduction_atomic_sync.dict.json  full_reduction_atomic_sync.html  full_reduction_atomic_sync.json  full_reduction_cg.dict.json  full_reduction_cg.html  full_reduction_cg.json  full_reduction_cub.dict.json  full_reduction_cub.html  full_reduction_ker2.dict.json  full_reduction_ker2.html  full_reduction_ker2.json  full_reduction_thrus.dict.json  full_reduction_thrust.html  full_reduction_thrust.json  full_reduction_unsafe.dict.json  full_reduction_unsafe.html  ge.dict.json  gemm_16_16.dict.json  gemm_16_16.html  gemm_16_16.json  gemm_16_32.dict.json  gemm_16_32.html  gemm_16_32.json  gemv.dict.json  (+273 more)
figures/spec/: full_prefixsum.yml  full_prefixsum_cg.yml  full_prefixsum_ker3.yml  full_reduction.yml  full_reduction_atomic_ballot.yml  full_reduction_atomic_sync.yml  full_reduction_cg.yml  full_reduction_cub.yml  full_reduction_ker2.yml  full_reduction_thrust.yml  full_reduction_unsafe.yml  gemm_16_16.yml  gemm_16_32.yml  gemv.yml  memory_read_global_memory_coalesced.yml  memory_read_global_memory_unit.yml  memory_read_lobal_memory.yml  memory_read_write_global.yml  memory_write_global_memory_coalesced.yml  memory_write_global_memory_unit.yml  memory_write_lobal_memory.yml  paper_tune_segmented_prefixsum.yml  paper_tune_segmented_reduction.yml  segmented_prefixsum_16.yml  segmented_prefixsum_16_unsafe.yml  segmented_prefixsum_16n.yml  segmented_prefixsum_16n_1024.yml  segmented_prefixsum_16n_16.yml  segmented_prefixsum_16n_256.yml  segmented_prefixsum_16n_32.yml  segmented_prefixsum_16n_64.yml  segmented_prefixsum_16n_block.yml  segmented_prefixsum_16n_block_unsafe.yml  segmented_prefixsum_16n_opt.yml  segmented_prefixsum_16n_opt_unsafe.yml  segmented_prefixsum_16n_unsafe.yml  segmented_prefixsum_256.yml  segmented_prefixsum_256_unsafe.yml  segmented_prefixsum_256n.yml  segmented_prefixsum_256n_1024.yml  (+67 more)
src/: config.hpp  main.cpp  sugar.cmake
src/gemm/: accuracy.cu  args.hpp  cublas.cu  cutlass.cu  sugar.cmake  utils.hpp  wmma.cu  wmma_naive.cu  wmma_sharedmem.cu
src/gemv/: accuracy.cu  args.hpp  cublas.cu  sugar.cmake  wmma_cublas.cu  wmma_naive.cu  wmma_sharedmem.cu
src/init/: cublas.cpp  cublas.hpp  cuda.cpp  cuda.hpp  flags.cpp  flags.hpp  init.cpp  init.hpp  logger.cpp  logger.hpp  sugar.cmake
src/prefixsum/: cub.cu  cub_original.cu  kernel.cuh  seg_cub_block.cu  seg_cub_block_original.cu  seg_cub_warp.cu  seg_cub_warp_original.cu  seg_thrust.cu  seg_thrust2.cu  seg_wmma_16.cu  seg_wmma_16n.cu  seg_wmma_16n_block.cu  seg_wmma_16n_opt.cu  seg_wmma_256.cu  seg_wmma_256n.cu  seg_wmma_256n_block.cu  sugar.cmake  thrust.cu  wmma_3kers.cu  wmma_3kers_block.cu  wmma_atomic.cu  wmma_cg.cu
src/reduction/: args.hpp  cub.cu  cub_original.cu  kernel.cuh  seg_cub_block.cu  seg_cub_block_original.cu  seg_cub_device.cu  seg_cub_device_original.cu  seg_cub_warp.cu  seg_cub_warp_original.cu  seg_thrust.cu  seg_wmma_16.cu  seg_wmma_16n.cu  seg_wmma_16n_block.cu  seg_wmma_16n_opt.cu  seg_wmma_256.cu  seg_wmma_256n.cu  seg_wmma_256n_block.cu  sugar.cmake  thrust.cu  wmma_2kers.cu  wmma_2kers_block.cu  wmma_atomic.cu  wmma_cg.cu
src/unsafe_prefixsum/: kernel.cuh  seg_wmma_16.cu  seg_wmma_16n.cu  seg_wmma_16n_block.cu  seg_wmma_16n_opt.cu  seg_wmma_256.cu  seg_wmma_256n.cu  seg_wmma_256n_block.cu  sugar.cmake  wmma_3kers.cu  wmma_3kers_256.cu  wmma_3kers_block.cu  wmma_atomic.cu  wmma_cg.cu
src/unsafe_reduction/: args.hpp  kernel.cuh  seg_wmma_16.cu  seg_wmma_16n.cu  seg_wmma_16n_block.cu  seg_wmma_16n_opt.cu  seg_wmma_256.cu  seg_wmma_256n.cu  seg_wmma_256n_block.cu  sugar.cmake  wmma_2kers.cu  wmma_2kers_block.cu  wmma_atomic.cu  wmma_cg.cu
src/utils/: atomic.cuh  backward.hpp  benchmark.hpp  commandlineflags.cpp  commandlineflags.hpp  compat.hpp  cublas.hpp  cuda.hpp  cuda_helpers.cuh  curand.hpp  debug.hpp  defer.hpp  errchk.hpp  error.hpp  fp16_conversion.hpp  hostname.hpp  mpl.hpp  nocopy.hpp  poly.hpp  sugar.cmake  timer.hpp  unused.hpp  utils.hpp  wmma_helpers.cuh
tools/: generate_sugar_files.py  merge_json.py  plot.py  plot_bokeh.py
